# yet-another-ngc-angular-try

./: BUILD.bazel  MODULE.bazel  README.md  angular.json  bazel-bin  bazel-testlogs  bazel-yet-another-no-ngc-try  defs.bzl  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
src/: index.html
src/app/: app.component.spec.ts  app.component.ts
tools/: BUILD.bazel  ng.bzl  ngc.esbuild.ts
