load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@npm//:@angular/compiler-cli/package_json.bzl", angular_compiler_cli = "bin")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config","ts_project")

# Define the @angular/compiler-cli ngc bin binary as a target
angular_compiler_cli.ngc_binary(
    name = "ngc",
    visibility = ["//visibility:public"],
)


# ESBuild plugin to run the Angular linker
